--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,9 +40,9 @@
       <p>E: info@seatyourself.com</p>
     </div>
     <span class="center">
-      <a href="http://www.facebook.com"><img src="http://www.fastforwardsim.com/images/Facebook_icon_grey.png" alt="Facebook"></a>
-      <a href="http://www.instagram.com"><img src="http://www.lorigoldsteinbooks.com/wp-content/uploads/2013/06/instagram-grey-2-300x300-150x150.png" alt="Instagram"></a>
-      <a href="http://www.twitter.com"><img src="https://dl.dropboxusercontent.com/u/80500150/twitter.png" alt="Twitter"></a>
+      <a href="http://www.facebook.com"><%= image_tag("facebook.svg", :alt => "Facebook") %></a>
+      <a href="http://www.instagram.com"><%= image_tag("instagram.svg", :alt => "Imstagram") %></a>
+      <a href="http://www.twitter.com"><%= image_tag("twitter.svg", :alt => "Twitter") %></a>
     </span>
     <div class="right">
       <p>www.seatyourself.com</p>
